Link fix, Fix for layout on small screens where title bar can't be displayed completely

--- a/Collect/public/css/main.css
+++ b/Collect/public/css/main.css
@@ -18,6 +18,7 @@ th {
     font-weight: bold;
     color: #000000;
     font-size: 4vh;
+    white-space: nowrap;
 }
 
 .header-logo {
